--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/public-sans": "^4.5.12",
+    "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.11.8",
     "@reduxjs/toolkit": "^1.9.2",
     "nanoid": "^5.0.4",
@@ -19,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
-    "use-local-storage": "^2.3.6"
+    "use-local-storage": "^2.3.6",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
