--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.0.10",
     "@types/redux-logger": "^3.0.12",
     "@vitejs/plugin-react": "^3.1.0",
